--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angular-fittext": "^2.1.1",
     "bignumber": "^1.1.0",
     "bignumber.js": "^9.0.0",
+    "dotenv": "^8.2.0",
+    "etherscan-api": "https://github.com/sebs/etherscan-api.git",
     "hammerjs": "^2.0.8",
     "moment": "^2.29.0",
     "ngx-clipboard": "^12.3.1",
@@ -38,9 +40,9 @@
     "@angular/cli": "~8.3.2",
     "@angular/compiler-cli": "~8.2.4",
     "@angular/language-service": "~8.2.4",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -50,7 +52,6 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   }
